--- a/Notebooks/Pickle/Pickler.ipynb
+++ b/Notebooks/Pickle/Pickler.ipynb
@@ -95,11 +95,69 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10,)\n"
+     ]
+    }
+   ],
    "source": [
     "# AUSTIN: Extract 3-4 samples from each theme first for validation set. Remove them from the list\n",
     "# Then distribute the remaining to each of the ten fold.\n",
     "\n",
+    "validation = []\n",
+    "size = [np.shape(love)[0], np.shape(cheerful)[0], np.shape(fearful)[0], np.shape(calm)[0], np.shape(sadness)[0], \n",
+    "             np.shape(bravery)[0]]\n",
+    "total = 0\n",
+    "for i in size:\n",
+    "    total += i\n",
+    "\n",
+    "portion = int(total*0.05)\n",
+    "portion_list = np.zeros(6)\n",
+    "for i in range(portion):\n",
+    "    portion_list[i%6]+=1\n",
+    "temp = []\n",
+    "\n",
+    "port_size = int(portion_list[0])\n",
+    "temp.append(love[:port_size])\n",
+    "del love[:port_size]\n",
+    "\n",
+    "port_size = int(portion_list[1])\n",
+    "temp.append(cheerful[:port_size])\n",
+    "del cheerful[:port_size]\n",
+    "\n",
+    "port_size = int(portion_list[2])\n",
+    "temp.append(fearful[:port_size])\n",
+    "del fearful[:port_size]\n",
+    "\n",
+    "port_size = int(portion_list[3])\n",
+    "temp.append(bravery[:port_size])\n",
+    "del bravery[:port_size]\n",
+    "\n",
+    "\n",
+    "port_size = int(portion_list[4])\n",
+    "temp.append(sadness[:port_size])\n",
+    "del sadness[:port_size]\n",
+    "\n",
+    "port_size = int(portion_list[5])\n",
+    "temp.append(calm[:port_size])\n",
+    "del calm[:port_size]\n",
+    "\n",
+    "for i in temp:\n",
+    "    for j in i:\n",
+    "        validation.append(j)\n",
+    "print(np.shape(validation))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "size = [np.shape(love)[0], np.shape(cheerful)[0], np.shape(fearful)[0], np.shape(calm)[0], np.shape(sadness)[0], \n",
     "             np.shape(bravery)[0]]\n",
     "cur_sample_ind = 0\n",
@@ -121,16 +179,6 @@
     "for i in range(size[5]):\n",
     "    folds[cur_sample_ind % 10].append(bravery[i])\n",
     "    cur_sample_ind += 1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#del folds[0][:6]\n",
-    "# print(folds[2])"
    ]
   },
   {
@@ -167,37 +215,13 @@
      ]
     }
    ],
-   "source": [
-    "fold_sizes = []\n",
-    "validation = []\n",
-    "i = 0\n",
-    "for fold in folds:\n",
-    "    fold_sizes.append(np.shape(fold)[0])\n",
-    "    print(np.shape(fold)[0])\n",
-    "for fold in folds:\n",
-    "    chop = int(fold_sizes[i]*0.05)\n",
-    "    validation.append(fold[:chop])\n",
-    "    del fold[:chop]\n",
-    "print(\" \")\n",
-    "print(\" \")\n",
-    "for fold in folds:\n",
-    "    fold_sizes.append(np.shape(fold)[0])\n",
-    "    print(np.shape(fold)[0])"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(20, 394)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = [[] for i in range(10)]\n",
     "labels = [[] for i in range(10)]\n",
@@ -219,14 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-7-d94b5275ebab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mvalid\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mvalidation\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mdata_val\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mlabels_val\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalid\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "for valid in validation:\n",
-    "    for val in valid:\n",
-    "        data_val.append(val[:-1])\n",
-    "        labels_val.append(val[-1])"
+    "    data_val.append(valid[:-1])\n",
+    "    labels_val.append(valid[-1])"
    ]
   },
   {
@@ -269,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
