MLP Code added to Logistic Regression Notebook

--- a/Notebooks/Training/Logisitc Regression Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Logisitc Regression Hyperparameter Search.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,6 +20,7 @@
     "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
     "# from sklearn.naive_bayes import CategoricalNB, ComplementNB, MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "import numpy as np\n",
     "from scipy.stats import uniform, norm\n",
     "\n",
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,12 +62,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Score: 0.3461\n",
+      "C => 0.1990823155353083\n",
+      "fit_intercept => True\n",
+      "max_iter => 900\n",
+      "penalty => l1\n",
+      "solver => saga\n",
+      "Splits: 10\n",
+      "Accuracy: 34.6062%\n"
+     ]
+    }
+   ],
    "source": [
     "# LogisticRegression, RandomizedSearch\n",
-    "random_search_iterations = 200\n",
+    "random_search_iterations = 1000\n",
     "k_folds = 10\n",
     "\n",
     "parameters = {\n",
@@ -90,36 +106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4. 1. 2. 4. 1. 1. 4. 4. 4. 1. 4. 4. 4. 4. 4. 4. 4. 4. 4. 1. 4. 4. 1. 1.\n",
-      " 4. 2. 1. 2. 4. 4. 4. 4. 1. 2. 4. 1. 4. 4. 1. 1. 1. 1. 4. 2. 4. 2. 1. 1.\n",
-      " 4. 4. 4. 2. 1. 4. 4. 4. 4. 4. 4. 4. 2. 4. 2. 2. 1. 4. 2. 4. 2. 4. 4. 4.\n",
-      " 4. 4. 4. 1. 4. 4. 4. 2. 2. 2. 1. 4. 4. 4. 4. 4. 4. 4. 4. 1. 1. 4. 4. 2.\n",
-      " 4. 1. 4. 1. 1. 1. 1. 1. 4. 4. 2. 2. 1. 4. 4. 2. 4. 4. 1. 2. 2. 1. 4. 4.\n",
-      " 4. 2. 2. 2. 4. 4. 4. 4. 4. 2. 2. 1. 4. 4. 2. 1. 4. 4. 2. 4. 4. 2. 4. 4.\n",
-      " 4. 1. 1. 4. 4. 1. 1. 2. 1. 4. 2. 4. 4. 4. 4. 2. 4. 4. 4. 4. 4. 4. 4. 4.\n",
-      " 4. 4. 4. 4. 4. 4. 4. 4. 2. 4. 4. 4. 4. 4. 4. 4. 4. 2. 4. 2. 4. 4. 4. 1.\n",
-      " 1. 4. 1. 2. 1. 4. 4. 4. 4. 4. 1. 4. 2. 4. 2. 1. 2. 1. 1. 4. 4. 4. 4. 1.\n",
-      " 1. 4. 1. 1. 4. 4. 2. 4. 4. 2. 4. 4. 1. 1. 2. 1. 4. 4. 4. 1. 1. 4. 4. 4.\n",
-      " 4. 4. 1. 4. 4. 4. 1. 1. 1. 4. 4. 4. 1. 1. 1. 4. 4. 4. 4. 4. 4. 2. 2. 2.\n",
-      " 1. 1. 1. 4. 1. 4. 4. 4. 1. 2. 4. 1. 4. 4. 4. 4. 4. 1. 2. 2. 4. 4. 4. 4.\n",
-      " 4. 1. 4. 4. 4. 4. 2. 1. 1. 1. 4. 4. 1. 4. 4. 4. 4. 1. 1. 4. 4. 1. 2. 4.\n",
-      " 4. 4. 4. 4. 1. 2. 2. 4. 2. 4. 4. 4. 2. 2. 4. 4. 1. 4. 4. 4. 2. 4. 4. 2.\n",
-      " 4. 4. 4. 4. 4. 1. 2. 1. 4. 4. 4. 4. 4. 4. 1. 1. 4. 4. 2. 4. 1. 4. 4. 4.\n",
-      " 4. 4. 4. 4. 2. 4. 4. 4. 4. 4. 1. 1. 2. 1. 2. 4. 1. 4. 4. 4. 4. 4. 2. 4.\n",
-      " 2. 1. 4. 1. 4. 4. 4. 2. 2. 1. 4. 2. 4. 4. 4. 1. 4. 4. 4. 1. 4. 1. 4. 4.\n",
-      " 4. 2. 4. 4. 4. 4. 4. 2. 4. 1. 1.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(y_out)"
+    "# MLPClassifier, RandomizedSearch\n",
+    "random_search_iterations = 100\n",
+    "k_folds = 10\n",
+    "\n",
+    "parameters = {\n",
+    "    'activation':['logistic', 'tanh', 'relu'], \n",
+    "    'solver' : ['lbfgs', 'sgd', 'adam'],\n",
+    "    'alpha': [1 / np.power(10,x) for x in range(1,10)],\n",
+    "    'batch_size' : [min(200,int(np.power(2,i))) for i in range(4,8)],\n",
+    "    'learning_rate' : ['constant', 'invscaling', 'adaptive'],\n",
+    "    'max_iter' : [100,200,300,400,500],\n",
+    "    'shuffle' : [True,False],\n",
+    "    'momentum' : uniform(loc=0.2,scale=0.8),\n",
+    "    'nesterovs_momentum' : [True,False],\n",
+    "    'early_stopping' : [True,False]\n",
+    "}\n",
+    "mlp = MLPClassifier()\n",
+    "rscv = RandomizedSearchCV(mlp, parameters,cv=k_folds,n_iter=random_search_iterations)\n",
+    "rscv.fit(x_train,y_train)\n",
+    "print(\"Best Score: {:.4f}\".format(rscv.best_score_))\n",
+    "for k,v in rscv.best_params_.items():\n",
+    "    print(\"{} => {}\".format(k,v))\n",
+    "print(\"Splits: {}\".format(rscv.n_splits_))\n",
+    "y_out = rscv.predict(x_train)\n",
+    "print(\"Accuracy: {:.4f}%\".format(np.mean(y_out == y_train) * 100.0))\n",
+    "# print(y_out)"
    ]
   },
   {
@@ -127,7 +143,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(y_out)"
+   ]
   }
  ],
  "metadata": {
