--- a/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
@@ -6,12 +6,12 @@
    "source": [
     "### Logistic Regression Training Script\n",
     "#### Author: Austin Fernandez\n",
-    "#### Date Modified: April 8, 2020"
+    "#### Date Modified: April 25, 2020"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,32 +33,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(267, 343)\n"
+     ]
+    }
+   ],
    "source": [
-    "x_train = np.empty((0,5))\n",
-    "y_train = np.array([])\n",
-    "    \n",
-    "with open(\"Toy Dataset.csv\",\"r\") as f:\n",
-    "    d_reader = csv.reader(f,delimiter=\",\",quotechar=\"\\\"\")\n",
-    "    first = True\n",
-    "    for line in d_reader:\n",
-    "        if first:\n",
-    "            first = False\n",
-    "            continue\n",
-    "        x_train = np.append(x_train,np.array(list(map(int,line[2:7]))).reshape((1,5)),axis=0)\n",
-    "        y_train = np.append(y_train,int(line[8]))\n",
-    "print(x_train.shape)\n",
-    "print(y_train.shape)\n",
-    "# print(y_train)"
+    "data = []    \n",
+    "f = open(\"HighAndLowFeatures(edited).csv\",\"r\")\n",
+    "d_reader = csv.reader(f,delimiter=\",\",quotechar=\"\\\"\")\n",
+    "first = True\n",
+    "for line in d_reader:\n",
+    "    if first:\n",
+    "        first = False\n",
+    "        continue\n",
+    "    data.append(line)\n",
+    "print(np.shape(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(267, 339)\n",
+      "(267,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train = np.empty((0,339))\n",
+    "y_train = np.array([])\n",
+    "\n",
+    "for line in data:\n",
+    "    x_train = np.append(x_train,np.array(list(map(float,line[1:-3]))).reshape((1,339)),axis=0)\n",
+    "    y_train = np.append(y_train,int(line[-1]))\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)\n",
+    "#print(y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(480, 339) (480,)\n",
+      "(480, 339) (480,)\n"
+     ]
+    }
+   ],
    "source": [
     "rand_seed = 3454132\n",
     "\n",
@@ -77,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +142,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# LogisticRegression, RandomizedSearch\n",
     "random_search_iterations = 200\n",
-    "k_folds = 10\n",
+    "k_folds = 5\n",
     "seed = 48151623\n",
     "\n",
     "parameters = {\n",
@@ -128,7 +166,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Oversampling:\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Random Oversampling:\")\n",
     "train_model(x_os,y_os,random_search_logreg)\n",
@@ -160,7 +206,7 @@
    "source": [
     "# MLPClassifier, RandomizedSearch\n",
     "random_search_iterations = 200\n",
-    "k_folds = 10\n",
+    "k_folds = 5\n",
     "seed = 48151623\n",
     "\n",
     "parameters = {\n",
@@ -214,6 +260,13 @@
     "                             cmap=plt.cm.Blues,\n",
     "                             normalize='true')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -232,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
