--- a/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
@@ -98,7 +98,8 @@
     "\n",
     "print(x_smote.shape,y_smote.shape)\n",
     "\n",
-    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
+    "                                random_state=rand_seed)\n",
     "\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "\n",
@@ -138,13 +139,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Trains and prints the result of the training and model selection.\n",
+    "\n",
+    "Parameters:\n",
+    "name - name of the test run\n",
+    "x_train - input data\n",
+    "y_train - target labels for data\n",
+    "model_selector - model_selection object\n",
+    "\"\"\"\n",
     "def print_res(name,x_train,y_train,model_selector):\n",
     "    print(\"{}:\".format(name))\n",
     "    train_model(x_train,y_train,model_selector)\n",
     "\n",
     "    # display confusion matrix\n",
     "    disp = plot_confusion_matrix(model_selector, x_train, y_train,\n",
-    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\"Fearful\",\"Sadness\",\"Love\"],\n",
+    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\\\n",
+    "                                                 \"Fearful\",\"Sadness\",\"Love\"],\n",
     "                                 cmap=plt.cm.Blues,\n",
     "                                 normalize='true')\n",
     "    # print(y_out)"
@@ -162,7 +173,8 @@
     "    file = pd.read_csv(\"HighAndLowFeatures(edited).csv\")\n",
     "    features = list(file)\n",
     "    fig, ax = plt.subplots(figsize=(40, 40))\n",
-    "    treefig = tree.plot_tree(dt, class_names=classes, feature_names=features[1:-3], fontsize=12, ax=ax)\n",
+    "    treefig = tree.plot_tree(dt, class_names=classes, \\\n",
+    "                             feature_names=features[1:-3], fontsize=12, ax=ax)\n",
     "    plt.show()"
    ]
   },
@@ -186,7 +198,8 @@
     "\n",
     "# train classifier for SMOTE data\n",
     "dt = tree.DecisionTreeClassifier()\n",
-    "rscv = RandomizedSearchCV(dt, parameters,cv=n_splits, random_state=rand_seed, n_iter=random_search_iterations,n_jobs=-1)"
+    "rscv = RandomizedSearchCV(dt, parameters,cv=n_splits, random_state=rand_seed, \\\n",
+    "                          n_iter=random_search_iterations,n_jobs=-1)"
    ]
   },
   {
