--- a/Notebooks/Training/SVM Hyperparameter Search.ipynb
+++ b/Notebooks/Training/SVM Hyperparameter Search.ipynb
@@ -96,7 +96,8 @@
     "\n",
     "print(x_smote.shape,y_smote.shape)\n",
     "\n",
-    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
+    "                                random_state=rand_seed)\n",
     "\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "\n",
@@ -136,13 +137,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Trains and prints the result of the training and model selection.\n",
+    "\n",
+    "Parameters:\n",
+    "name - name of the test run\n",
+    "x_train - input data\n",
+    "y_train - target labels for data\n",
+    "model_selector - model_selection object\n",
+    "\"\"\"\n",
     "def print_res(name,x_train,y_train,model_selector):\n",
     "    print(\"{}:\".format(name))\n",
     "    train_model(x_train,y_train,model_selector)\n",
     "\n",
     "    # display confusion matrix\n",
     "    disp = plot_confusion_matrix(model_selector, x_train, y_train,\n",
-    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\"Fearful\",\"Sadness\",\"Love\"],\n",
+    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\\\n",
+    "                                                 \"Fearful\",\"Sadness\",\"Love\"],\n",
     "                                 cmap=plt.cm.Blues,\n",
     "                                 normalize='true')\n",
     "    # print(y_out)"
@@ -168,7 +179,10 @@
     "}\n",
     "\n",
     "svmc = svm.SVC()\n",
-    "random_search_svm = RandomizedSearchCV(svmc, parameters,random_state=rand_seed,n_iter=random_search_iterations,cv=k_folds,n_jobs=-1)"
+    "random_search_svm = RandomizedSearchCV(svmc, parameters,\\\n",
+    "                                       random_state=rand_seed,\\\n",
+    "                                       n_iter=random_search_iterations,\\\n",
+    "                                       cv=k_folds,n_jobs=-1)"
    ]
   },
   {
@@ -284,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,11 +313,14 @@
     "    'dual':[True, False], \n",
     "    'C': np.logspace(-3, 2, 6), \n",
     "    'multi_class':['ovr', 'crammer_singer'], \n",
-    "    'max_iter':[1000, 2500, 3000]\n",
+    "    'max_iter':[250, 500, 1000]\n",
     "}\n",
     "\n",
     "linearsvm = svm.LinearSVC()\n",
-    "random_search_linear = RandomizedSearchCV(linearsvm, parameters,random_state=rand_seed,n_iter=random_search_iterations,cv=k_folds,n_jobs=-1)"
+    "random_search_linear = RandomizedSearchCV(linearsvm, parameters,\\\n",
+    "                                          random_state=rand_seed,\\\n",
+    "                                          n_iter=random_search_iterations,\\\n",
+    "                                          cv=k_folds,n_jobs=-1)"
    ]
   },
   {
