Proofread Mitch's Docu

--- a/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Decison Tree Classifier for Classifying Music Emotions\n",
+    "---\n",
+    "## About the Dataset\n",
+    "\n",
+    "For this experiment, our dataset contains 267 music samples that were labelled by 2 music experts. The dataset has a combination of high level and low level features. The high level features are tempo, arousal, and scale, which were all labelled by the music experts. The low level features were extracted from the music samples using the JAudio software.\n",
+    "\n",
+    "---\n",
+    "## Libraries\n",
+    "\n",
+    "We used the pandas and csv libraries to load the dataset, which is a csv file. Then we used numpy to manipulate the loaded dataset. We used the sci kit learn library for the decision tree algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -21,6 +37,13 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we load the data from the csv file and preprocess it by removing the header row and the filename column"
    ]
   },
   {
@@ -50,6 +73,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -76,6 +106,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we perform different methods to deal with imbalanced datasets. We used the oversampling *Insert link to oversampling if needed* and SMOTE methodology *Insert link to SMOTE if needed*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -98,12 +135,18 @@
     "\n",
     "print(x_smote.shape,y_smote.shape)\n",
     "\n",
-    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
-    "                                random_state=rand_seed)\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
     "\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "\n",
     "print(x_os.shape,y_os.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we defined a function that will train the model and perform the hyperparameter search. x_train is the input data, y_train is the labels for the input data, and hp_search is the algorithm for hyperparameter search"
    ]
   },
   {
@@ -134,31 +177,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function trains the model, using the previously defined train_model function, and displays the confusion matrix of the model. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "Trains and prints the result of the training and model selection.\n",
-    "\n",
-    "Parameters:\n",
-    "name - name of the test run\n",
-    "x_train - input data\n",
-    "y_train - target labels for data\n",
-    "model_selector - model_selection object\n",
-    "\"\"\"\n",
     "def print_res(name,x_train,y_train,model_selector):\n",
     "    print(\"{}:\".format(name))\n",
     "    train_model(x_train,y_train,model_selector)\n",
     "\n",
     "    # display confusion matrix\n",
     "    disp = plot_confusion_matrix(model_selector, x_train, y_train,\n",
-    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\\\n",
-    "                                                 \"Fearful\",\"Sadness\",\"Love\"],\n",
+    "                                 display_labels=[\"Calm\",\"Cheerful\",\"Bravery\",\"Fearful\",\"Sadness\",\"Love\"],\n",
     "                                 cmap=plt.cm.Blues,\n",
     "                                 normalize='true')\n",
     "    # print(y_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function displays the decision tree that the model used"
    ]
   },
   {
@@ -173,9 +220,18 @@
     "    file = pd.read_csv(\"HighAndLowFeatures(edited).csv\")\n",
     "    features = list(file)\n",
     "    fig, ax = plt.subplots(figsize=(40, 40))\n",
-    "    treefig = tree.plot_tree(dt, class_names=classes, \\\n",
-    "                             feature_names=features[1:-3], fontsize=12, ax=ax)\n",
+    "    treefig = tree.plot_tree(dt, class_names=classes, feature_names=features[1:-3], fontsize=12, ax=ax)\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are the experiments we ran with the default dataset, oversampled version, and SMOTE version using random search as the hyperparameter search algorithm\n",
+    "\n",
+    "---\n",
+    "This cell instantiates the decison tree object and the hyperparameter search object."
    ]
   },
   {
@@ -198,8 +254,14 @@
     "\n",
     "# train classifier for SMOTE data\n",
     "dt = tree.DecisionTreeClassifier()\n",
-    "rscv = RandomizedSearchCV(dt, parameters,cv=n_splits, random_state=rand_seed, \\\n",
-    "                          n_iter=random_search_iterations,n_jobs=-1)"
+    "rscv = RandomizedSearchCV(dt, parameters,cv=n_splits, random_state=rand_seed, n_iter=random_search_iterations,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model is trained using the default "
    ]
   },
   {
