--- a/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
@@ -440,7 +440,26 @@
     }
    ],
    "source": [
+    "# read unlabeled data\n",
     "x_unlabeled = extract_data(\"Training Set (Unlabeled).csv\",False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call predict() on x_unlabeled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# build new training set with labeled samples (vanilla) concatenated with newly labeled samples from previous cell"
    ]
   },
   {
