Fixed Column Count

--- a/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,15 +63,16 @@
     "            continue\n",
     "        data.append(line)\n",
     "    print(np.shape(data))\n",
-    "    x_train = np.empty((0,340))\n",
+    "    col_count = 324\n",
+    "    x_train = np.empty((0,col_count))\n",
     "    y_train = np.array([])\n",
     "\n",
     "    for line in data:\n",
     "        if with_label:\n",
-    "            x_train = np.append(x_train,np.array(list(map(float,line[1:-2]))).reshape((1,340)),axis=0)\n",
+    "            x_train = np.append(x_train,np.array(list(map(float,line[1:-2]))).reshape((1,col_count)),axis=0)\n",
     "            y_train = np.append(y_train,int(line[-1]))\n",
     "        else:\n",
-    "            x_train = np.append(x_train,np.array(list(map(float,line[1:6]+line[8:]))).reshape((1,340)),axis=0)\n",
+    "            x_train = np.append(x_train,np.array(list(map(float,line[1:6]+line[8:]))).reshape((1,col_count)),axis=0)\n",
     "    print(x_train.shape)\n",
     "    print(y_train.shape)\n",
     "    if with_label:\n",
@@ -90,15 +91,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(246, 343)\n",
-      "(246, 340)\n",
+      "(246, 327)\n",
+      "(246, 324)\n",
       "(246,)\n"
      ]
     }
