Fixed Validation and Training Sets

--- a/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
@@ -107,7 +107,7 @@
     "mnb = LogisticRegression(random_state=rand_seed)\n",
     "random_search_logreg = RandomizedSearchCV(mnb, parameters,cv=k_folds,\\\n",
     "                                          n_iter=random_search_iterations,\\\n",
-    "                                          random_state=rand_seed)"
+    "                                          random_state=rand_seed,n_jobs=-1)"
    ]
   },
   {
