Creating a new branche for extra experiments

--- a/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Hyperparameter Search.ipynb
@@ -13,7 +13,7 @@
     "---\n",
     "## Libraries\n",
     "\n",
-    "We used the pandas and csv libraries to load the dataset, which is a csv file. Then we used numpy to manipulate the loaded dataset. We used the sci kit learn library for the decision tree algorithm."
+    "We used the pandas and csv libraries to load the dataset, which is a csv file. Then we used numpy to manipulate the loaded dataset. We used the sci kit learn library for the decision tree algorithm. The XLB file is where we modularized the training and validation process"
    ]
   },
   {
@@ -45,14 +45,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we load the data from the csv file and preprocess it by removing the header row and the filename column"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively"
+    "Here we load the data from the csv file and preprocess it by removing the header row and the filename column this is done by the extract_data function from the XLB file which takes the filename of the dataset as a parameter\n",
+    "\n",
+    "---\n",
+    "\n",
+    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively. We also used the scikit learn min max scaler to normalize the dataset."
    ]
   },
   {
@@ -89,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we perform different methods to deal with imbalanced datasets. We used the oversampling *Insert link to oversampling if needed* and SMOTE methodology *Insert link to SMOTE if needed*"
+    "Here we perform different methods to deal with imbalanced datasets. We used the oversampling and SMOTE methodology "
    ]
   },
   {
@@ -120,20 +117,6 @@
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
     "\n",
     "print(x_os.shape,y_os.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Here we defined a function that will train the model and perform the hyperparameter search. x_train is the input data, y_train is the labels for the input data, and hp_search is the algorithm for hyperparameter search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This function trains the model, using the previously defined train_model function, and displays the confusion matrix of the model. "
    ]
   },
   {
@@ -173,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model is trained using the default "
+    "This model is trained using the imbalanced dataset"
    ]
   },
   {
@@ -188,6 +171,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model is trained using the oversampled dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -196,6 +186,13 @@
     "print_res(\"Random Oversampling\",x_os,y_os,rscv)\n",
     "disp_tree(dt,x_os,y_os,\"FinalTrainingSet.csv\")\n",
     "test_res(\"Random Oversampling\",x_val,y_val,rscv)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model is trained using the SMOTE dataset"
    ]
   },
   {
@@ -226,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
