--- a/Notebooks/Training/Naive Bayes Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Naive Bayes Hyperparameter Search.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Naive Bayes Training Script\n",
-    "#### Author: Austin Fernandez\n",
-    "#### Date Modified: April 25, 2020"
+    "# Naive Bayes for Classifying Music Emotions\n",
+    "---\n",
+    "## About the Dataset\n",
+    "\n",
+    "For this experiment, our dataset contains 267 music samples that were labelled by 2 music experts. The dataset has a combination of high level and low level features. The high level features are tempo, arousal, and scale, which were all labelled by the music experts. The low level features were extracted from the music samples using the JAudio software.\n",
+    "\n",
+    "---\n",
+    "## Libraries\n",
+    "\n",
+    "We used the pandas and csv libraries to load the dataset, which is a csv file. Then we used numpy to manipulate the loaded dataset. We used the sci kit learn library for the Naive Bayes algorithms. The XLB file is where we modularized the training and validation process"
    ]
   },
   {
@@ -32,6 +39,17 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we load the data from the csv file and preprocess it by removing the header row and the filename column this is done by the extract_data function from the XLB file which takes the filename of the dataset as a parameter\n",
+    "\n",
+    "---\n",
+    "\n",
+    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively. We also used the scikit learn min max scaler to normalize the dataset."
    ]
   },
   {
@@ -65,6 +83,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we perform different methods to deal with imbalanced datasets. We used the oversampling and SMOTE methodology "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -95,6 +120,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are the experiments we ran with the default dataset, oversampled version, and SMOTE version using grid search as the hyperparameter search algorithm\n",
+    "\n",
+    "---\n",
+    "This cell instantiates the Gaussian Naive Bayes object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -108,6 +143,13 @@
     "}\n",
     "cnb = GaussianNB()\n",
     "grid_search_gaussian = GridSearchCV(cnb, parameters,cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Gaussain Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -252,6 +294,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the Multinomial Naive Bayes object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -265,6 +314,13 @@
     "}\n",
     "mnb = MultinomialNB()\n",
     "grid_search_multinomial = GridSearchCV(mnb, parameters,cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Multinomial Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -412,6 +468,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the Categorical Naive Bayes object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -425,6 +488,13 @@
     "}\n",
     "canb = CategoricalNB()\n",
     "grid_search_categorical = GridSearchCV(canb, parameters,cv=k_folds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Categorical Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -496,6 +566,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the Complement Naive Bayes object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -509,6 +586,13 @@
     "    'norm' : [True, False]}\n",
     "cnb = ComplementNB()\n",
     "grid_search_complement = GridSearchCV(cnb, parameters,cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Complement Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -542,6 +626,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are the experiments we ran with the default dataset, oversampled version, and SMOTE version using random search as the hyperparameter search algorithm\n",
+    "\n",
+    "---\n",
+    "This cell instantiates the Complement Naive Bayes object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -561,6 +655,13 @@
     "random_search_complement = RandomizedSearchCV(cnb, parameters,cv=k_folds,\\\n",
     "                                              n_iter=random_search_iterations,\\\n",
     "                                              random_state=rand_seed,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Complement Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -591,6 +692,13 @@
    "source": [
     "print_res(\"SMOTE\",x_smote,y_smote,random_search_complement)\n",
     "test_res(\"SMOTE\",x_smote,y_smote,random_search_complement)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the Categorical Naive Bayes object and the hyperparameter search object."
    ]
   },
   {
@@ -641,6 +749,13 @@
    "source": [
     "print_res(\"SMOTE\",x_smote[:,:5],y_smote,random_search_categorical)\n",
     "test_res(\"SMOTE\",x_val[:,:5],y_val,random_search_categorical)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the Multinomial Naive Bayes object and the hyperparameter search object."
    ]
   },
   {
@@ -710,7 +825,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
