Added more annotations

--- a/Notebooks/Training/Naive Bayes Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Naive Bayes Hyperparameter Search.ipynb
@@ -1032,6 +1032,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Categorical Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -1200,6 +1207,13 @@
     "random_search_multinomial = RandomizedSearchCV(mnb, parameters,cv=k_folds,\\\n",
     "                                            n_iter=random_search_iterations,\\\n",
     "                                            random_state=rand_seed,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the Multinomial Naive Bayes model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
