Documentation for all notebooks used

--- a/Notebooks/Training/Decision Tree Classifier Semi-Supervised Labeller.ipynb
+++ b/Notebooks/Training/Decision Tree Classifier Semi-Supervised Labeller.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Decison Tree Classifier for Classifying Music Emotions\n",
+    "# Decison Tree Classifier for Semi-Supervised Task\n",
     "---\n",
     "## About the Dataset\n",
     "\n",
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively"
+    "After the initial preprocessing step, we separated the music features and the labelled emotion into the x_train and y_train arrays respectively"
    ]
   },
   {
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This model is trained using the default "
+    "The following cells are where the Decision Tree model is trained using the imbalanced, oversampled, and SMOTE. They also display the decision tree figure."
    ]
   },
   {
@@ -196,6 +196,13 @@
    "source": [
     "print_res(\"SMOTE\",x_smote,y_smote,rscv)\n",
     "disp_tree(dt,x_smote,y_smote,\"TrainingSet (Labeled Only).csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model has the best results for our labeled data set, so we will be using it to label our unlabeled data set in the semi-supervised learning task"
    ]
   },
   {
@@ -248,6 +255,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is where we extract our unlabeled dataset for combining with our labeled dataset to setup for our final ML tasks"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -268,6 +282,13 @@
     "scaler = MinMaxScaler()\n",
     "scaler.fit(x_unlabeled)\n",
     "x_unlabeled = scaler.transform(x_unlabeled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We predict using the best model mentioned above."
    ]
   },
   {
@@ -293,6 +314,13 @@
     "# call predict() on x_unlabeled\n",
     "unlabeledpredict = dt.predict(x_unlabeled)\n",
     "print(unlabeledpredict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The last cells are simply for concatenating the 2 datasets, creating our final dataset"
    ]
   },
   {
@@ -404,7 +432,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
