--- a/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
@@ -8,7 +8,7 @@
     "---\n",
     "## About the Dataset\n",
     "\n",
-    "For this experiment, our dataset contains 267 music samples that were labelled by 2 music experts. The dataset has a combination of high level and low level features. The high level features are tempo, arousal, and scale, which were all labelled by the music experts. The low level features were extracted from the music samples using the JAudio software.\n",
+    "For this experiment, our dataset contains 267 music samples that were labelled by 2 music experts and 151 samples labeled in the semi-supervised learning task. The dataset has a combination of high level and low level features. The high level features are tempo, arousal, and scale, which were all labelled by the music experts. The low level features were extracted from the music samples using the JAudio software.\n",
     "\n",
     "---\n",
     "## Libraries\n",
@@ -48,7 +48,7 @@
     "\n",
     "---\n",
     "\n",
-    "After the initial preprocessing step, we sperated the music features and the labelled emotion into the x_train and y_train arrays respectively. We also used the scikit learn min max scaler to normalize the dataset."
+    "After the initial preprocessing step, we separated the music features and the labelled emotion into the x_train and y_train arrays respectively. We also used the scikit learn min max scaler to normalize the dataset."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cells are where the logistice regression model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
+    "The following cells are where the logistic regression model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -499,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
