--- a/Notebooks/Training/SVM Hyperparameter Search.ipynb
+++ b/Notebooks/Training/SVM Hyperparameter Search.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# NuSVC SVC and LinearSVC for Classifying Music Emotions\n",
+    "---\n",
+    "## About the Dataset\n",
+    "\n",
+    "For this experiment, our dataset contains 267 music samples that were labelled by 2 music experts and 151 samples labeled in the semi-supervised learning task. The dataset has a combination of high level and low level features. The high level features are tempo, arousal, and scale, which were all labelled by the music experts. The low level features were extracted from the music samples using the JAudio software.\n",
+    "\n",
+    "---\n",
+    "## Libraries\n",
+    "\n",
+    "We used the pandas and csv libraries to load the dataset, which is a csv file. Then we used numpy to manipulate the loaded dataset. We used the sci kit learn library for the Nu Support Vector Classifier, Support Vector Classifier, and Linear Support Vector Classifier algorithms. The XLB file is where we modularized the training and validation process"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,6 +38,17 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we load the data from the csv file and preprocess it by removing the header row and the filename column this is done by the extract_data function from the XLB file which takes the filename of the dataset as a parameter\n",
+    "\n",
+    "---\n",
+    "\n",
+    "After the initial preprocessing step, we separated the music features and the labelled emotion into the x_train and y_train arrays respectively. We also used the scikit learn min max scaler to normalize the dataset."
    ]
   },
   {
@@ -55,6 +82,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we perform different methods to deal with imbalanced datasets. We used the oversampling and SMOTE methodology "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -82,6 +116,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are the experiments we ran with the default dataset, oversampled version, and SMOTE version using random search as the hyperparameter search algorithm\n",
+    "\n",
+    "---\n",
+    "This cell instantiates the NuSVC object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -106,6 +150,13 @@
     "                                          random_state=rand_seed,\\\n",
     "                                          n_iter=random_search_iterations,\\\n",
     "                                          cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the NuSVC model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -265,6 +316,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the SVC object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -290,6 +348,13 @@
     "                                       random_state=rand_seed,\\\n",
     "                                       n_iter=random_search_iterations,\\\n",
     "                                       cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the SVC model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -452,6 +517,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This cell instantiates the LinearSVC object and the hyperparameter search object."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -477,6 +549,13 @@
     "                                          random_state=rand_seed,\\\n",
     "                                          n_iter=random_search_iterations,\\\n",
     "                                          cv=k_folds,n_jobs=-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following cells are where the LinearSVC model is trained using the imbalanced, oversampled, and SMOTE. They are then validated using the validation set"
    ]
   },
   {
@@ -655,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
