Started Feature Selection

--- a/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
+++ b/Notebooks/Training/Logistic Regression Hyperparameter Search.ipynb
@@ -34,6 +34,7 @@
     "from sklearn.metrics import plot_confusion_matrix\n",
     "from imblearn.over_sampling import SMOTE, RandomOverSampler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.feature_selection import SelectKBest, VarianceThreshold, chi2, f_classif, mutual_info_classif\n",
     "from XLB import *\n",
     "\n",
     "import warnings\n",
@@ -70,15 +71,24 @@
     }
    ],
    "source": [
+    "# extract data from files\n",
     "x_train, y_train = extract_data(\"FinalTrainingSet.csv\")\n",
     "x_val, y_val = extract_data(\"Validation Set.csv\")\n",
+    "\n",
+    "# scale data values\n",
     "scaler = MinMaxScaler()\n",
     "scaler.fit(x_train)\n",
     "x_train = scaler.transform(x_train)\n",
+    "x_val = scaler.transform(x_val)\n",
     "\n",
-    "scaler_val = MinMaxScaler()\n",
-    "scaler.fit(x_val)\n",
-    "x_val = scaler.transform(x_val)"
+    "# feature selection\n",
+    "num_features = 45\n",
+    "feat_sel = VarianceThreshold()\n",
+    "x_train = feat_sel.fit_transform(x_train)\n",
+    "feat_sel_2 = SelectKBest(chi2,k=num_features)\n",
+    "x_train = feat_sel_2.fit_transform(x_train,y_train)\n",
+    "x_val = feat_sel_2.transform(feat_sel.transform(x_val))\n",
+    "# print(\"After Variance Threshold Feature Selection:\",x_train.shape)"
    ]
   },
   {
@@ -106,16 +116,12 @@
     "rand_seed = 3454132\n",
     "\n",
     "oversampler = SMOTE(sampling_strategy=\"not majority\",random_state=rand_seed)\n",
-    "\n",
     "x_smote, y_smote = oversampler.fit_resample(x_train,y_train)\n",
-    "\n",
     "print(x_smote.shape,y_smote.shape)\n",
     "\n",
     "oversampler = RandomOverSampler(sampling_strategy=\"not majority\",\\\n",
     "                                random_state=rand_seed)\n",
-    "\n",
     "x_os, y_os = oversampler.fit_resample(x_train,y_train)\n",
-    "\n",
     "print(x_os.shape,y_os.shape)"
    ]
   },
@@ -136,18 +142,18 @@
    "outputs": [],
    "source": [
     "# LogisticRegression, RandomizedSearch\n",
-    "random_search_iterations = 300\n",
-    "k_folds = 10\n",
+    "random_search_iterations = 500\n",
+    "k_folds = 5\n",
     "rand_seed = 3249807\n",
     "\n",
     "parameters = {\n",
     "    'penalty':['l1','l2', 'elasticnet', 'none'], \n",
     "    'dual' : [True, False],\n",
-    "    'C': uniform(loc=0,scale=4),\n",
+    "    'C': np.logspace(-10,1,1000),\n",
     "    'fit_intercept' : [True,False],\n",
     "    'class_weight' : ['balanced', None],\n",
     "    'solver' : ['newton-cg', 'lbfgs', 'sag', 'liblinear', 'saga'],\n",
-    "    'max_iter' : [100,200],\n",
+    "    'max_iter' : [200],\n",
     "    'l1_ratio' : uniform(loc=0,scale=1),\n",
     "    'warm_start': [True, False]\n",
     "}\n",
